syntax = "proto3";

package auth;

option go_package = "github.com/tkaewplik/go-microservices/proto/auth";

// AuthService provides authentication operations
service AuthService {
  // Register creates a new user account
  rpc Register(RegisterRequest) returns (AuthResponse);
  // Login authenticates a user and returns a token
  rpc Login(LoginRequest) returns (AuthResponse);
  // ValidateToken validates a JWT token and returns user info
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  int32 id = 1;
  string username = 2;
  string token = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int32 user_id = 2;
  string username = 3;
}
